plugins {
    id 'java'
}


group 'com.mstruzek'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}



compileJava {
    targetCompatibility = 17
    sourceCompatibility = 17
}



dependencies {
    implementation group: 'colt', name: 'colt', version: '1.2.0'
    implementation group: 'gov.nist.math', name: 'jama', version: '1.0.3'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'

}
